--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="233dp"
-        android:layout_marginEnd="58dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="232dp"
+        android:fontFamily="sans-serif-black"
         android:text="@string/miles"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,18 +22,20 @@
         android:id="@+id/textView2"
         android:layout_width="73dp"
         android:layout_height="0dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="sans-serif-black"
         android:text="@string/km"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="219dp"
-        android:layout_marginEnd="77dp"
+        android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:text=" "
@@ -45,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="77dp"
+        android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:text=""
