--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="4dp"
         android:text="@string/mtok"
+        app:backgroundTint="@color/purple_700"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -71,6 +72,7 @@
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="212dp"
         android:text="@string/ktom"
+        app:backgroundTint="@color/purple_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
